--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,12 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 orbs:
   datadog-agent: datadog/agent@0
   gradle: circleci/gradle@2.2.0
 
 jobs:
   checkout-app:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+      - image: img/base:stable
     environment:
       DD_API_KEY: 61fe0e3fa0c4d4bf0bd0aea125d209cc
     steps:
@@ -23,11 +14,8 @@ jobs:
       - datadog-agent/setup
       - run: gradle test
       - datadog-agent/stop
-
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
   spring-boot-app-workflow:
     jobs:
-      - checkout-app
+      # - checkout-app
       - gradle/test
