--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     docker:
       - image: img/base:stable
     environment:
-      DD_API_KEY: 61fe0e3fa0c4d4bf0bd0aea125d209cc
+      DD_API_KEY: ssss
     steps:
       - checkout
       - datadog-agent/setup
