--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ orbs:
 jobs:
   test:
     docker:
-      - image: cimg/openjdk
+      - image: cimg/openjdk:11.0
     steps:
       - checkout
       - datadog-agent/setup
