--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       - restore_cache:
           key: v1-gradle-cache-{{ checksum "build.gradle" }}
       - datadog-agent/setup
-      - run: gradle test -Pdd-civisibility
+      - run: ./gradlew test -Pdd-civisibility
       - datadog-agent/stop
       - save_cache:
           paths:
@@ -36,7 +36,14 @@ jobs:
           key: v1-gradle-wrapper-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}
       - restore_cache:
           key: v1-gradle-cache-{{ checksum "build.gradle" }}
-      - run: gradle build
+      - run: ./gradlew assemble
+      - setup_remote_docker:
+          version: 20.10.7
+      - run: |
+          TAG=0.1.$CIRCLE_BUILD_NUM
+          docker build -t yaalexf/spring-boot-app VERSION=${TAG} .
+          echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
+          docker push yaalexf/spring-boot-app
 workflows:
   spring-boot-app-workflow:
     jobs:
