--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,6 @@ plugins {
 	id 'application'
 }
 
-group = 'com.example'
-version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
 repositories {
@@ -29,8 +27,6 @@ dependencies {
 	// end::tests[]
 }
 
-applicationDefaultJvmArgs = ["-javaagent:${configurations.ddTracerAgent.asPath}"]
-
 test {
     if(project.hasProperty("dd-civisibility")) {
 			jvmArgs = [
@@ -40,4 +36,8 @@ test {
 			]
   }
   useJUnitPlatform()
+}
+
+application {
+    mainClass = 'com.example.springboot.Application'
 }
