--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ jobs:
           version: 20.10.7
       - run: |
           TAG=0.1.$CIRCLE_BUILD_NUM
-          docker build -t yaalexf/spring-boot-app VERSION=${TAG} .
+          docker build -t yaalexf/spring-boot-app --build-arg VERSION=${TAG} .
           echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
           docker push yaalexf/spring-boot-app
 workflows:
