--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
       - setup_remote_docker:
           version: 20.10.7
       - run: |
-          ls -la
+          env | sort
           TAG=0.1.$CIRCLE_BUILD_NUM
           docker build -t yaalexf/spring-boot-app --build-arg VERSION=${TAG} .
           echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
