--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
           key: v1-gradle-cache-{{ checksum "build.gradle" }}
   build:
     docker:
-      - image: cimg/openjdk:11.0
+      - image: cimg/openjdk:11.0-node
     environment:
       GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dorg.gradle.workers.max=2"
     steps:
@@ -42,6 +42,7 @@ jobs:
       - run: |
           GIT_COMMIT_SHA=$(git rev-parse HEAD)
           TAG=0.1.$CIRCLE_BUILD_NUM
+          npm install -g @datadog/datadog-ci
           datadog-ci git-metadata upload
           docker build -t yaalexf/spring-boot-app --build-arg VERSION=${TAG} --build-arg GIT_COMMIT_SHA=${GIT_COMMIT_SHA} .
           echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
