--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,9 +44,9 @@ jobs:
           TAG=0.1.$CIRCLE_BUILD_NUM
           
           npx @datadog/datadog-ci git-metadata upload
-          docker build -t yaalexf/spring-boot-app --build-arg VERSION=${TAG} --build-arg GIT_COMMIT_SHA=${GIT_COMMIT_SHA} .
+          docker build -t yaalexf/spring-boot --build-arg VERSION=${TAG} --build-arg GIT_COMMIT_SHA=${GIT_COMMIT_SHA} .
           echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
-          docker push yaalexf/spring-boot-app
+          docker push yaalexf/spring-boot
 workflows:
   spring-boot-app-workflow:
     jobs:
